--- a/test.examples.xcodeproj/xcshareddata/xcschemes/test.examplesEarlGreyTests.xcscheme
+++ b/test.examples.xcodeproj/xcshareddata/xcschemes/test.examplesEarlGreyTests.xcscheme
@@ -24,15 +24,20 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "EarlGrey"
             value = "true"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "DYLD_INSERT_LIBRARIES"
+            value = "@executable_path/EarlGrey.framework/EarlGrey"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
